lot of fixes / additions no time to describe it all.

--- a/website/actualite.html
+++ b/website/actualite.html
@@ -83,7 +83,7 @@
                     <nav class="side-nav-menu w-100">
                         <ul class="navbar-nav">
                             <li class="nav-item menu-parent">
-                                <button class="nav-link title scroll">ARMA Environnement</button>
+                                <button class="nav-link title scroll">Arma environnement</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="about.html">Qui
@@ -206,38 +206,27 @@
                         <div class="col-md-8 offset-md-1">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="index.html">ARMA Environnement</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html">Arma Environnement</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Presse</li>
                                 </ol>
                             </nav>
-                            <h1 class="page-title">Lorem ipsum dolor sit amet</h1>
+                            <h1 class="page-title">L'actualité ARMA Environnement</h1>
 
                             <div class="grid-layout content-wrapper">
-                                <div class="card-deck mb-4">
+                                <div class="card-deck large-left mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=1" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=1" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
                                             <a href="#" class="btn blue-btn">Lire plus</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=2" alt="Card image cap"></a>
-                                        <div class="card-body">
-                                            <h5 class="card-title">Lorem ipsum</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
-                                        </div>
-                                    </div>
-                                    <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=3" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=2" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -248,9 +237,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-deck mb-4">
+                                <div class="card-deck large-right mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=4" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=3" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -261,22 +250,11 @@
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=5" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=4" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        </div>
-                                        <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
-                                        </div>
-                                    </div>
-                                    <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=6" alt="Card image cap"></a>
-                                        <div class="card-body">
-                                            <h5 class="card-title">Lorem ipsum</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
                                             <a href="#" class="btn blue-btn">Lire plus</a>
@@ -285,7 +263,7 @@
                                 </div>
                                 <div class="card-deck mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=7" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=5" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -296,7 +274,7 @@
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=8" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=6" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -307,7 +285,7 @@
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=9" alt="Card image cap"></a>
+                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/100?random=7" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
