--- a/website/blog.html
+++ b/website/blog.html
@@ -207,10 +207,10 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">ARMA Environnement</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Presse</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Blog</li>
                                 </ol>
                             </nav>
-                            <h1 class="page-title">Lorem ipsum dolor sit amet</h1>
+                            <h1 class="page-title">Le Blog ARMA Environnement</h1>
 
                             <div class="grid-layout content-wrapper">
                                 <div class="card-deck mb-4">
