--- a/website/presse-medias.html
+++ b/website/presse-medias.html
@@ -210,7 +210,7 @@
                                     <li class="breadcrumb-item active" aria-current="page">Presse</li>
                                 </ol>
                             </nav>
-                            <h1 class="page-title">Lorem ipsum dolor sit amet</h1>
+                            <h1 class="page-title">Gallerie et médiathèque</h1>
 
                             <div class="grid-layout content-wrapper">
                                 <div class="card-deck mb-4">
@@ -222,7 +222,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -233,7 +233,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -244,7 +244,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                 </div>
@@ -257,7 +257,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -268,7 +268,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -279,7 +279,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +292,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -303,7 +303,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                     <div class="card">
@@ -314,7 +314,7 @@
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn">Ouvrir médias</a>
                                         </div>
                                     </div>
                                 </div>
