--- a/website/about.html
+++ b/website/about.html
@@ -83,7 +83,7 @@
                     <nav class="side-nav-menu w-100">
                         <ul class="navbar-nav">
                             <li class="nav-item menu-parent">
-                                <button class="nav-link title scroll">Arma environnement</button>
+                                <button class="nav-link title scroll">ARMA Environnement</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="about.html">Qui
@@ -180,8 +180,7 @@
 
                     <div class="side-footer w-100">
                         <p class="rites">
-                            &copy; 2020 ARMA Environnement <br>
-                            Groupe ARMA Holding - Tous droits résérvés
+                            &copy; 2020 ARMA Environnement - Tous droits résérvés
                         </p>
                         <p class="rites">
                             <b>Tel.</b> +212 (0) 5 37 63 55 56 <br>
@@ -206,13 +205,13 @@
                         <div class="col-md-8 offset-md-1">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="index.html">Arma Environnement</a></li>
+                                    <li class="breadcrumb-item"><a href="index.html">ARMA Environnement</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Qui sommes-nous ?</li>
                                 </ol>
                             </nav>
                             <h1 class="page-title">Qui sommes-nous ?</h1>
 
-                            <div class="content-wrapper">
+                            <div class="text-bloc content-wrapper col-md-10">
                                 <p>Acteur responsable, filiale du Groupe ARMA, ARMA environnement a vocation à donner
                                     l’exemple en
                                     offrant des solutions innovantes en matière de services à l’environnement.</p>
@@ -220,10 +219,27 @@
                                     services. Avec une
                                     expertise pointue, une exigence de qualité et un fort ancrage national, le Groupe
                                     ARMA est structuré
-                                    autour de trois métiers qui constituent ses filiales:</p>
-                                <p><b>ARMA Environnement :</b> Services à la ville,et à l’environnement<br />
-                                    <b>AXIAL Facilities :</b> Facility management et services</p>
+                                    autour de trois métiers qui constituent ses filiales.
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
+
+                            <div class="text-bloc content-wrapper col-md-10">
+                                <h4>ARMA Environnement</h4>
+                                    Services à la ville, et à l’environnement ... lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                            </div>
+
+                            <div class="text-bloc content-wrapper col-md-10">
+                                <h4>ARMA Facilities</h4>
+                                Facility management et services ... lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                            </div>
+
+                            <div class="text-bloc content-wrapper col-md-10">
+                                <h4>ARMA Holding</h4>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
