--- a/website/cards-nopic.html
+++ b/website/cards-nopic.html
@@ -207,114 +207,105 @@
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="index.html">ARMA Environnement</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Presse</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Appels d'offres</li>
                                 </ol>
                             </nav>
-                            <h1 class="page-title">Lorem ipsum dolor sit amet</h1>
+                            <h1 class="page-title">Nos soumissions aux appels d'offres</h1>
 
                             <div class="grid-layout content-wrapper">
                                 <div class="card-deck mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=1" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16" /> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=2" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=3" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card-deck mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=4" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=5" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=6" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="card-deck mb-4">
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=7" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=8" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                     <div class="card">
-                                        <a href="#"><img class="card-img-top" src="https://picsum.photos/300/200?random=9" alt="Card image cap"></a>
                                         <div class="card-body">
                                             <h5 class="card-title">Lorem ipsum</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                         </div>
                                         <div class="card-footer">
-                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                            <a href="#" class="btn blue-btn"><img src="assets/img/icon_pdf-w.png" height="16"/> Télécharger</a>
                                         </div>
                                     </div>
                                 </div>
